# ModernCMake

./: .codedocs  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
bundles/: BundleList.cmake  CMakeLists.txt  Main.cpp  project.vcxproj.user.in
bundles/core/: CMakeLists.txt  IMidiInputDevice.h  MidiMessage.cpp  MidiMessage.h  manifest.json
bundles/core/test/: CMakeLists.txt  MidiMessageTest.cpp
bundles/midi/: CMakeLists.txt  MidiBundleActivator.cpp  MidiBundleActivator.h  RtMidiInAdapter.cpp  RtMidiInAdapter.h  manifest.json
bundles/midi/test/: CMakeLists.txt
